--- a/ux/src/main/webapp/app/src/content-room.html
+++ b/ux/src/main/webapp/app/src/content-room.html
@@ -1,21 +1,21 @@
 <template>
-    <require from="./links.css"></require>
+    <require from="./content-room.css"></require>
 
     <div click.trigger="navigate()">Navigate</div>
 
     <div class="cards clearfix" scroll.trigger="handleScrollEvent($event) & throttle:250">
-        <div class="card2" repeat.for="card of cards">
-            <a target="_blank" href.bind="card.url">
-                <div class="card-image" css="background-image: url(${card.imageUrl});"></div>
+        <div class="card2" repeat.for="link of links">
+            <a target="_blank" href.bind="link.url">
+                <div class="card-image" css="background-image: url(${link.imageUrl});"></div>
                 <div class="card-text">
-                    <div class="card-title">${card.title}</div>
-                    <div class="card-description">${card.description}</div>
+                    <div class="card-title">${link.title}</div>
+                    <div class="card-description">${link.description}</div>
                 </div>
             </a>
 
             <div class="card-buttons clearfix">
                 <div class="card-buttons-left">
-                    <span class="card-btn icon-plus-circled"></span>
+                    <span class="card-btn icon-plus-circled" click.delegate="addLinkToRoom(link)"></span>
                     <span class="card-btn icon-minus-circled"></span>
                 </div>
                 <div class="card-buttons-right">
