remove link from room

--- a/ux/src/main/webapp/app/src/content-room.html
+++ b/ux/src/main/webapp/app/src/content-room.html
@@ -17,7 +17,7 @@
             <div class="card-buttons clearfix">
                 <div class="card-buttons-left">
                     <span class="card-btn icon-plus-circled" click.delegate="addLinkToRoom(link)"></span>
-                    <span class="card-btn icon-minus-circled"></span>
+                    <span class="card-btn icon-minus-circled" click.delegate="removeLinkFromRoom(link)"></span>
                 </div>
                 <div class="card-buttons-right">
                     <span class="card-btn icon-thumbs-up-alt"></span>
