--- a/ux/src/main/webapp/app/src/content-room-treeview.html
+++ b/ux/src/main/webapp/app/src/content-room-treeview.html
@@ -1,4 +1,4 @@
 <template>
     <require from="./treeview/tree-node"></require>
-    <tree-node repeat.for="node of nodes" current.bind="node"></tree-node>
+    <tree-node repeat.for="child of nodes" node.bind="child"></tree-node>
 </template>
