--- a/ux/src/main/webapp/app/src/demo-treeview.html
+++ b/ux/src/main/webapp/app/src/demo-treeview.html
@@ -1,4 +1,4 @@
 <template>
     <require from="./treeview/tree-node"></require>
-    <tree-node repeat.for="node of nodes" current.bind="node"></tree-node>
+    <tree-node repeat.for="root of roots" node.bind="root" treeview.bind="self"></tree-node>
 </template>
