--- a/ux/src/main/webapp/app/src/content-room-treeview.html
+++ b/ux/src/main/webapp/app/src/content-room-treeview.html
@@ -1,4 +1,4 @@
 <template>
-    <require from="./treeview/tree-node"></require>
-    <tree-node repeat.for="child of nodes" node.bind="child"></tree-node>
+    <require from="./treeview/tree-view"></require>
+    <tree-view tree.bind="tree"></tree-view>
 </template>
