put a content room tree on left and show links of a particular room on right

--- a/ux/src/main/webapp/app/src/treeview/tree-node.html
+++ b/ux/src/main/webapp/app/src/treeview/tree-node.html
@@ -5,7 +5,7 @@
         <li>
             <div>
                 <span if.bind="node.children.length > 0" click.trigger="node.toggleNode()" class="tree-node-icon fa ${node.expanded ? 'fa-caret-down' : 'fa-caret-right'}"></span>
-                <span class="${node.children.length > 0 ? '' : 'tree-node-padding'} ${node.selected ? 'tree-node-selected' : ''}" click.delegate="onClick()">${node.data}</span>
+                <span class="${node.children.length > 0 ? '' : 'tree-node-padding'} ${node.selected ? 'tree-node-selected' : ''}" click.delegate="onClick()">${node.data.text}</span>
             </div>
             <tree-node repeat.for="child of node.children" node.bind="child"></tree-node>
         </li>
