--- a/ux/src/main/webapp/app/src/nav-bar.html
+++ b/ux/src/main/webapp/app/src/nav-bar.html
@@ -21,6 +21,12 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
+                <li class="logout">
+                    <a href="logout">Logout</a>
+                </li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
                 <li class="loader" if.bind="router.isNavigating">
                     <i class="fa fa-spinner fa-spin fa-2x"></i>
                 </li>
